{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 16,
  "lineage": "97b6cfef-908f-eaf0-2a62-9aa541940cb3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Databaseinternetgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:109127394768:internet-gateway/igw-070d6acfba767a95d",
            "id": "igw-070d6acfba767a95d",
            "owner_id": "109127394768",
            "tags": {
              "Name": "internet-gateway"
            },
            "tags_all": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-07cc67359e27025cd"
          },
          "dependencies": [
            "aws_vpc.dataserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "databaseRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:109127394768:route-table/rtb-047db3bfbd1cb0508",
            "id": "rtb-047db3bfbd1cb0508",
            "owner_id": "109127394768",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-070d6acfba767a95d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RouteTB"
            },
            "tags_all": {
              "Name": "Public-RouteTB"
            },
            "timeouts": null,
            "vpc_id": "vpc-07cc67359e27025cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Databaseinternetgw",
            "aws_vpc.dataserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "datarouteprivate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:109127394768:route-table/rtb-0e3deecef122fe716",
            "id": "rtb-0e3deecef122fe716",
            "owner_id": "109127394768",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Routetable"
            },
            "tags_all": {
              "Name": "Routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-07cc67359e27025cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dataserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routeTbwithSN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0664323c578cc963d",
            "route_table_id": "rtb-047db3bfbd1cb0508",
            "subnet_id": "subnet-0aa1fb0636f1f9445"
          },
          "dependencies": [
            "aws_route_table.databaseRT",
            "aws_subnet.datasbPB1",
            "aws_vpc.dataserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DataBaseSeucrityGrp1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:109127394768:security-group/sg-07e8092ec1fb020f8",
            "description": "Allow HTTP/HTTPS access on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e8092ec1fb020f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from Internetgateway",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow HTTP/HTTPS",
            "name_prefix": "",
            "owner_id": "109127394768",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-07cc67359e27025cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dataserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "datasbPB1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:109127394768:subnet/subnet-0aa1fb0636f1f9445",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa1fb0636f1f9445",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "109127394768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "datapublic1SB"
            },
            "tags_all": {
              "Name": "datapublic1SB"
            },
            "vpc_id": "vpc-07cc67359e27025cd"
          },
          "dependencies": [
            "aws_vpc.dataserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "datasbPR1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:109127394768:subnet/subnet-08c23b79089a972e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c23b79089a972e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "109127394768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dataprivate1SB"
            },
            "tags_all": {
              "Name": "dataprivate1SB"
            },
            "vpc_id": "vpc-07cc67359e27025cd"
          },
          "dependencies": [
            "aws_vpc.dataserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "datasbPR2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:109127394768:subnet/subnet-00d5a6270d70ef49c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d5a6270d70ef49c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "109127394768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dataprivate2SB"
            },
            "tags_all": {
              "Name": "dataprivate2SB"
            },
            "vpc_id": "vpc-07cc67359e27025cd"
          },
          "dependencies": [
            "aws_vpc.dataserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dataserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:109127394768:vpc/vpc-07cc67359e27025cd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0c3943c1d67e0ed35",
            "default_route_table_id": "rtb-098c8eec4c1c8b792",
            "default_security_group_id": "sg-078a6a51f2b385732",
            "dhcp_options_id": "dopt-08a45debf580c80a0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07cc67359e27025cd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-098c8eec4c1c8b792",
            "owner_id": "109127394768",
            "tags": {
              "Name": "dataserver",
              "location": "chicago"
            },
            "tags_all": {
              "Name": "dataserver",
              "location": "chicago"
            }
          }
        }
      ]
    }
  ]
}